--- a/content/references.bib
+++ b/content/references.bib
@@ -1,18 +1,108 @@
+@TechReport{spec:sparql,
+  author      = "Andy Seaborne and Steven Harris",
+  title       = "{SPARQL} 1.1 Query Language",
+  month       = mar,
+  url        = "https://www.w3.org/TR/2013/REC-sparql11-query-20130321/",
+  year        = "2013",
+  type        = "{W3C} Recommendation",
+  institution = "W3C",
+}
+
+@Misc{virtuoso-full-text-search,
+  title    = {Virtuoso: Using Full Text Search in SPARQL},
+  year     = {2024},
+  url      = {https://docs.openlinksw.com/virtuoso/sparqlextensions/#rdfsparqlrulefulltext},
+  language = {en}
+}
+
+@Misc{jena-construct-quad,
+  title    = {Apache Jena: ARQ - Construct Quad},
+  year     = {2024},
+  url      = {https://jena.apache.org/documentation/query/construct-quad.html#Grammar},
+  language = {en}
+}
+
+@Misc{oxigraph-adjust,
+  title    = {Oxigraph: SEP 0002: calendar and duration operations},
+  year     = {2024},
+  url      = {https://github.com/oxigraph/oxigraph/wiki/SPARQL#sep-0002-calendar-and-duration-operations},
+  language = {en}
+}
+
+@TechReport{sparql-1-2,
+  author      = "Olaf Hartig and Andy Seaborne and Ruben Taelman and Gregory Williams and Thomas Pellissier Tanon",
+  title       = "{SPARQL} 1.2 Query Language",
+  month       = apr,
+  url         = "https://www.w3.org/TR/sparql12-query/",
+  year        = "2025",
+}
+
+@TechReport{rdf-1-2,
+  author      = "Olaf Hartig and Pierre-Antoine Champin and Gregg Kellogg and Andy Seaborne",
+  title       = "{SPARQL} 1.2 Query Language",
+  month       = mar,
+  url         = "https://www.w3.org/TR/rdf12-concepts/",
+  year        = "2025",
+}
+
+@TechReport{chevrotain,
+  author      = "Chevrotain (Shahar Soel)",
+  title       = "Chevrotain - Parser Building Toolkit for JavaScript",
+  month       = apr,
+  url         = "https://github.com/Chevrotain/chevrotain/",
+  year        = "2025",
+}
+
+@inproceedings{comunica,
+  author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
+  booktitle = {Proceedings of the 17th International Semantic Web Conference},
+  doi = {10.1007/978-3-030-00668-6\_15},
+  month = oct,
+  pages = {239--255},
+  publisher = {Springer International Publishing},
+  title = {{Comunica: A Modular SPARQL Query Engine for the Web}},
+  year = {2018},
+  url = {https://link.springer.com/content/pdf/10.1007/978-3-030-00668-6.pdf#page=278}
+}
+
+
+@article{parr1995antlr,
+  title={ANTLR: A predicated-LL (k) parser generator},
+  author={Parr, Terence J. and Quong, Russell W.},
+  journal={Software: Practice and Experience},
+  volume={25},
+  number={7},
+  pages={789--810},
+  year={1995},
+  publisher={Wiley Online Library},
+  url = {https://www.antlr2.org/article/1055550346383/antlr.pdf}
+}
+
+@TechReport{bison-gnu,
+  author      = "GNU",
+  title       = "GNU Bison",
+  month       = apr,
+  url         = "https://www.gnu.org/software/bison/",
+  year        = "2025",
+}
+
+
+
 @inproceedings{solid,
-  title={A Demonstration of the {Solid} platform for Social Web Applications},
+  title={A demonstration of the solid platform for social web applications},
   author={Mansour, Essam and Sambra, Andrei Vlad and Hawke, Sandro and Zereba, Maged and Capadisli, Sarven and Ghanem, Abdurrahman and Aboulnaga, Ashraf and Berners-Lee, Tim},
-  booktitle={Proceedings WWW2016},
+  booktitle={Proceedings of the 25th international conference companion on world wide web},
   pages={223--226},
   year={2016},
-  url.bak = {https://dl.acm.org/doi/10.1145/2872518.2890529},
-  organization.bak={International World Wide Web Conferences Steering Committee}
+  url = {https://dl.acm.org/doi/10.1145/2872518.2890529},
+  organization={International World Wide Web Conferences Steering Committee}
 }
 
 @TechReport{spec:type-index,
   author      = "Timea Turdean and Jeff Zucker and Virginia Balseiro and Sarven Capadisli and Tim Berners-Lee",
   title       = "Type Indexes",
   month       = jun,
-  url.bak     = "https://solid.github.io/type-indexes/",
+  url         = "https://solid.github.io/type-indexes/",
   year        = "2022",
 }
 
@@ -20,7 +110,7 @@
   author      = "Eric Prud'hommeaux and Justin Bingham ",
   title       = "Shape Trees Specification",
   month       = dec,
-  url.bak        = "https://shapetrees.org/TR/specification/",
+  url         = "https://shapetrees.org/TR/specification/",
   year        = "2021",
   type        = "Editor's Draft",
 }
@@ -32,7 +122,7 @@
   author = {Speicher, Steve and Arwe, John and Malhotra, Ashok},
   month = feb,
   year = {2015},
-  url.bak = {https://www.w3.org/TR/2015/REC-ldp-20150226/}
+  url = {https://www.w3.org/TR/2015/REC-ldp-20150226/}
 }
 
 @article{codd1970relational,
@@ -66,7 +156,7 @@
   author      = "Thomas Baker and Eric Prud'hommeaux",
   title       = "Shape Expressions (ShEx) 2.1 Primer",
   month       = oct,
-  url.bak        = "https://shex.io/shex-primer-20191009/",
+  url        = "https://shex.io/shex-primer-20191009/",
   year        = "2019",
   type        = "Final Community Group Report",
 }
@@ -75,7 +165,7 @@
   author      = "Holger Knublauch and Dimitris Kontokostas",
   title       = "Shapes Constraint Language ({SHACL})",
   month       = jul,
-  url.bak        = "https://www.w3.org/TR/2017/REC-shacl-20170720/",
+  url        = "https://www.w3.org/TR/2017/REC-shacl-20170720/",
   year        = "2017",
   bibsource   = "https://w2.syronex.com/jmr/w3c-biblio",
   type        = "{W3C} Recommendation",
@@ -86,19 +176,11 @@
   author={De Smet, Jitse},
   title={Abstracting Data Updates over a Document-oriented interface of a Permissioned Decentralized Environment},
   year={2024},
-  url.bak ={http://lib.ugent.be/catalog/rug01:003215161},
+  url ={http://lib.ugent.be/catalog/rug01:003215161},
   language={en}
 }
 
-@TechReport{spec:sparql,
-  author      = "Andy Seaborne and Steven Harris",
-  title       = "{SPARQL} 1.1 Query Language",
-  month       = mar,
-  url.bak     = "https://www.w3.org/TR/2013/REC-sparql11-query-20130321/",
-  year        = "2013",
-  type        = "{W3C} Recommendation",
-  institution = "W3C",
-}
+
 
 @TechReport{spec:sparqlupdatelang,
   author      = "Paula Gearon and Alexandre Passant and Axel Polleres",
@@ -107,18 +189,7 @@
   year        = "2013",
   type        = "{W3C} Recommendation",
   institution = "W3C",
-  url.bak        = "https://www.w3.org/TR/2013/REC-sparql11-update-20130321/",
-}
-
-@inproceedings{bib:comunica,
-author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
-booktitle = {Proceedings ISWC2018},
-doi.bak = {10.1007/978-3-030-00668-6\_15},
-month = oct,
-pages = {239--255},
-publisher = {Springer International Publishing},
-title = {{Comunica: A Modular SPARQL Query Engine for the Web}},
-year = {2018}
+  url        = "https://www.w3.org/TR/2013/REC-sparql11-update-20130321/",
 }
 
 @article{solidquery,
@@ -134,4 +205,3 @@ year = {2018}
   journal={arXiv preprint arXiv:2407.00998},
   year={2024}
 }
-
