--- a/content/references.bib
+++ b/content/references.bib
@@ -86,6 +86,13 @@
   year        = "2025",
 }
 
+@book{alfred2007compilers,
+  title={Compilers principles, techniques \& tools},
+  author={Alfred, V Aho and Monica, S Lam and Jeffrey, D Ullman},
+  year={2007},
+  publisher={pearson Education}
+}
+
 
 
 @inproceedings{solid,
