--- a/content/0.abstract.md
+++ b/content/0.abstract.md
@@ -21,3 +21,4 @@
 
 **Video**: [https://youtu.be/](https://youtu.be/)
 
+**Canonical version**: [https://traqula-demo-semantics-2025.jitsedesmet.be/](https://traqula-demo-semantics-2025.jitsedesmet.be/)
