--- a/content/1.introduction.md
+++ b/content/1.introduction.md
@@ -5,16 +5,16 @@ The [SPARQL query language](cite:cites spec:sparql), a cornerstone of the Semant
 has evolved through both standardisation and real-world innovation.
 While SPARQL 1.1 defines a clear and extensible foundation,
 the ecosystem has gradually diverged as implementers introduced powerful but engine-specific extensions.
-For example, Virtuoso offers [full-text search capabilities](cite:cites virtuoso-full-text-search)
+For example, Virtuoso offers [full-text search capabilities](cite:cites virtuoso-full-text-search),
 Apache Jena supports [CONSTRUCT QUAD queries](cite:cites jena-construct-quad),
 and Oxigraph provides [extended date-time-functionality including the ADJUST function](cite:cites oxigraph-adjust).
 These features are often highly valuable, but also incompatible,
 creating a heterogeneous landscape where queries that run on one engine may fail on another.
 
-This diversity presents a serious challenge for SPARQL portability, SPARQL tooling and federated querying.
+This diversity presents a serious challenge for SPARQL portability, tooling and federated querying.
 With the finalisation of the [SPARQL 1.2 specification](cite:cites sparql-1-2),
 the gap between supported language features is likely to widen further,
-since migration to SPARQL 1.2 is not trivial, requiring substantial updates to the underlying [datasets representation and RDF store](cite:cites rdf-1-2).
+since migration to SPARQL 1.2 is not trivial, requiring substantial updates to the [datasets representation and underlying RDF store](cite:cites rdf-1-2).
 Moreover, the working group has announced that after SPARQL 1.2 finalisation,
 they plan to move toward a more agile ["maintenance and new features" mode](https://github.com/w3c/sparql-dev/issues/32#issuecomment-2621209920),
 which hints at even faster iteration cycles in the future.
@@ -28,7 +28,7 @@ Unlike traditional parser generators such as [ANTLR](cite:cites parr1995antlr) o
 which rely on Domain Specific Languages (DSLs) and generate static parsing code — Traqula defines parsers entirely within TypeScript.
 This eliminates the compile step, enables programmatic extension, and leverages strong typing to provide a safer,
 more developer-friendly API.
-Traqula is not a hand-built parser either since it uses the declarative rule constructors provided by Chevrotain.
+Traqula is not a hand-built parser either, as it uses the declarative rule constructors provided by Chevrotain.
 
 By adopting the Builder design pattern, Traqula empowers both researchers and practitioners to add, override, or swap grammar fragments at runtime.
 This opens the door to use cases such as maintainable heterogeneous query interface tooling (e.g., for tools like [YASGUI](https://yasgui.org/)),
