--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -36,10 +36,12 @@ It is thus essential that a token definition that is a subset of another is loca
 Take for example _tokenA_ defined by the regex `/appel/` should appear in the list before _tokenB_ defined by `/a[a-z]*/`. 
 
 A token is defined using a regex like:
-```typescript
-import { createToken } from '@traqula/core';
-const traqulaToken = createToken({ name: 'traqula', pattern: /traqula/i, label: 'TRAQULA' });
-```
+<figure id="token-def" class="listing">
+````/code/tokenDefinition.ts````
+<figcaption markdown="block">
+This is some nice code!
+</figcaption>
+</figure>
 
 And the LexerBuilder allows you to easily create that list in the correct order providing function like `merge`,
 `moveBefore`, `moveAfter`, etc.
@@ -63,21 +65,29 @@ Each rule should then return a function that can be executed by the parser when 
 this function gets a context entry and parameters if need be, and return a partial Syntax Tree. 
 An example rule definition is:
 
-```typescript
-export const iriOrNil: SparqlRule<'iriOrNil', URL | null> = <const>{
-  name: 'iriOrNil',
-  impl: ({SUBRULE, CONSUME, OR}) => () => OR<URL | null>([
-    {ALT: () => SUBRULE(iri, undefined)},
-    {ALT: () => {
-        CONSUME(l.terminals.nil);
-        return null;
-      } },
-  ]),
-};
-```
+<figure id="ruleDef" class="listing">
+````/code/ruleDef.ts````
+<figcaption markdown="block">
+This is some nice code!
+</figcaption>
+</figure>
+
 
 These rule definitions can then be used to construct a parser using the parser builder which provides methods like
 `typePatch`, `addRule`, `deleteRule`, and `merge`.
+After the construction of your parser, you can build it,
+returning a parser which allows you to start parsing a string from any of the parser rules added to the builder.
 
 
+<figure id="parserBuild" class="listing">
+````/code/parserBuild.ts````
+<figcaption markdown="block">
+This is some nice code!
+</figcaption>
+</figure>
+
+
+## Generator Builder
+
+A generator can be used to convert a created AST to a string again. This can be done 
 
