tarnsform to ceur format

--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -89,5 +89,8 @@ This is some nice code!
 
 ## Generator Builder
 
-A generator can be used to convert a created AST to a string again. This can be done 
+A generator can be used to convert a created AST to a string again.
+This can be done in a similar way to the parser generator, namely an object with its name and definition.
+The definition is again a function that receives declarative functions used for generation and return a function that can be called by the generator.
+That function receives the AST, a context and parameter types.
 
