pre llm architecture

--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -34,18 +34,18 @@ A lexer consists of a list of token definitions that are tried in order.
 The first token definition matching to the current location of charter stream gets emitted, and the character stream gets consumed for a non-zero number of character matching the token definition.
 It is thus essential that a token definition that is a subset of another is located before the other definition.
 Take for example _tokenA_ defined by the regex `/appel/` should appear in the list before _tokenB_ defined by `/a[a-z]*/`. 
+Tokens can be defined as shown in [](#token-def).
+Afterward, the LexerBuilder allows you to easily create that list in the correct order providing function like `merge`,
+`moveBefore`, `moveAfter`, etc.
+While it's type safety provides limited compile time checks on the validity of the lexer.
 
-A token is defined using a regex like:
+
 <figure id="token-def" class="listing">
 ````/code/tokenDefinition.ts````
 <figcaption markdown="block">
-This is some nice code!
+Definition of a token matching 'traqula' in a case-insensitive manner.
 </figcaption>
 </figure>
-
-And the LexerBuilder allows you to easily create that list in the correct order providing function like `merge`,
-`moveBefore`, `moveAfter`, etc.
-While it's type safety provides limited compile time checks on the validity of the lexer.
 
 ## Parser Builder
 
@@ -63,26 +63,25 @@ for example when a rule constructs large arrays that can be cached between execu
 
 Each rule should then return a function that can be executed by the parser when parsing,
 this function gets a context entry and parameters if need be, and return a partial Syntax Tree. 
-An example rule definition is:
+[](#ruleDef) shows an example parser rule definition.
+These rule definitions can then be used to construct a parser using the parser builder which provides methods like
+`typePatch`, `addRule`, `deleteRule`, and `merge`.
+After the construction of your parser, you can build it, as shown in [](#parserBuild),
+returning a parser which allows you to start parsing a string from any of the parser rules added to the builder.
 
 <figure id="ruleDef" class="listing">
 ````/code/ruleDef.ts````
 <figcaption markdown="block">
-This is some nice code!
+The definition of a parser rule parsing either a URI of the nil token, returning the parser URI or null respectively.
 </figcaption>
 </figure>
-
-
-These rule definitions can then be used to construct a parser using the parser builder which provides methods like
-`typePatch`, `addRule`, `deleteRule`, and `merge`.
-After the construction of your parser, you can build it,
-returning a parser which allows you to start parsing a string from any of the parser rules added to the builder.
 
 
 <figure id="parserBuild" class="listing">
 ````/code/parserBuild.ts````
 <figcaption markdown="block">
-This is some nice code!
+The construction of a parser including the iriOrNil rule constructed in [](#ruleDef).
+It also shows how to parse using the iriOrNil rule as the starting rule.
 </figcaption>
 </figure>
 
