LLM clearify architecture

--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -1,44 +1,56 @@
 ## Software Architecture
 {:#architecture}
 
-A parser is typically written in one of three ways:
-1. a hand-built parser - execution times very on the implementation.
-Has potential to be very fast since a combination of low level optimizations and language specific choices can be made.
-2. using a parser generator (eg. [ANTLR](cite:cites parr1995antlr), [Bison](cite:cites bison-gnu)) - creates an executable parser based on some specific format. The parsers are 'compiled' from some Domain Specific Language (DSL), which is typically Extended Backus–Naur form (EBNF) based.
-3. A Parser Building Toolkit (eg. [Chevrotain](cite:cites chevrotain)) - a hybrid of the previous two.
-It allows you to declaratively define rules like using a parser generator without the compile step, while staying in the confinements of a programming language.
+Parsers are typically implemented in one of three ways:
 
-To foster modularity while keeping down mental overhead of the modularity, we chose to use a parser building toolkit.
-Additionally, parsing typically happens in [multiple phases](cite:cites alfred2007compilers), relevant in this work are:
-1. Lexical Analysis/ scanning - done by a lexer: transforms character stream into token stream.
-2. Syntax analysis/ parsing - done by a parser: transforms token stream to syntax tree - creating a tree representation of the language.
-3. Semantic Analysis - likely done by the parser, after parsing: Validates the syntax tree - take in the example of SPARQL: you may not bind to a variable already in scope.
+1. Hand-built parsers — These are manually implemented parsers tailored to a specific grammar.
+While they can be highly performant due to low-level optimizations and language-specific design,
+they are often difficult to maintain, extend, or modularize. 
+2. Parser generators — Tools such as [ANTLR](cite:cites parr1995antlr) and [Bison](cite:cites bison-gnu) use a Domain Specific Language (DSL),
+typically based on Extended Backus–Naur Form (EBNF), to define a grammar.
+These grammars are then compiled into standalone parser code.
+While powerful, such approaches introduce a compile step and tend to be rigid, making modular extensions cumbersome. 
+3. Parser building toolkits — Libraries such as [Chevrotain](cite:cites chevrotain) offer a hybrid approach,
+enabling declarative grammar specification within a host programming language.
+These toolkits eliminate the compile step and allow for flexible,
+programmatic grammar definitions with fine-grained control over behavior and integration.
 
-In the case of Traqula, some semantic checks can be done during the parsing phase,
-doing so creates clear error messages as the context of tokens is still present at parse time,
-as such the exception can tell at what token (line and offset) an error occurred.   
+To support modularity while keeping the mental model approachable, Traqula is built using a parser building toolkit.
+Parsing itself is typically divided into multiple phases [](cite:cites alfred2007compilers),
+of which the following are relevant to this work:
 
-The Traqula project is a [monorepo](https://monorepo.tools/) consisting of 2 types of packages:
-1. engines: these are software packages ready to be used by some consumer, for example a prebuilt SPARQL parser
-2. non-engines (packages): these are software packages that can be used to construct you own engines.
+1. Lexical Analysis (scanning): A lexer transforms a character stream into a token stream. 
+2. Syntax Analysis (parsing): A parser transforms the token stream into an abstract syntax tree (AST). 
+3. Semantic Analysis: Performed during or after parsing,
+this phase validates constraints not enforced by grammar alone.
+For instance, SPARQL forbids binding to a variable which is already in scope.
 
-Traqula exports a number of engines like: parser for SPARQL 1.1 and 1.2, and generators for SPARQL 1.1 and 1.2.
-These engines in turn rely on non-engine packages such as the Traqula core package and the SPARQL grammar rule packages.
-The Traqula core package is where most of the magic happens in regard to the construction of lexers, parsers and generators.
-Each of these software components has their own dedicated builder, the LexerBuilder, parserBuilder and GeneratorBuilder.
+
+Traqula performs some semantic checks during parsing to generate precise and contextual error messages while token positions are still available,
+enabling accurate diagnostics with row and column offsets.
+
+The Traqula codebase follows a [monorepo](https://monorepo.tools/) structure and is divided into two main categories of packages:
+
+1. Engines — These are prebuilt, ready-to-use components such as SPARQL 1.1 and 1.2 parsers or generators. 
+2. Non-engine packages — These expose modular building blocks used to construct engines,
+such as grammar fragments or core construction utilities.
+
+At the core of Traqula lies its builder infrastructure.
+Each main component—lexer, parser, and generator—has a dedicated builder:
+LexerBuilder, ParserBuilder, and GeneratorBuilder.
+These builders provide type-safe APIs to assemble, customize, and extend parsing pipelines.
 
 ## Lexer Builder
 
-Lexers can be build using the LexerBuilder.
-A lexer consists of a list of token definitions that are tried in order.
-The first token definition matching to the current location of charter stream gets emitted, and the character stream gets consumed for a non-zero number of character matching the token definition.
-It is thus essential that a token definition that is a subset of another is located before the other definition.
-Take for example _tokenA_ defined by the regex `/appel/` should appear in the list before _tokenB_ defined by `/a[a-z]*/`. 
-Tokens can be defined as shown in [](#token-def).
-Afterward, the LexerBuilder allows you to easily create that list in the correct order providing function like `merge`,
-`moveBefore`, `moveAfter`, etc.
-While it's type safety provides limited compile time checks on the validity of the lexer.
+Lexers are constructed using the LexerBuilder,
+which operates on an ordered list of token definitions.
+Token definitions are applied in sequence: the first match at the current position in the character stream is emitted as a token.
+This makes the order of definitions critical—more specific patterns must appear before more general ones.
+For example, a token defined by the regex `/appel/` should precede one defined by `/a[a-z]*/` to ensure correct tokenization.
 
+Tokens can be defined using standard JavaScript regular expressions and annotated with optional metadata as shown in [](#token-def).
+The LexerBuilder supports utility functions such as `merge`, `moveBefore`, and `moveAfter` to assist with reordering and composing token lists.
+Additionally, the builders type system will help with the construction of the lexer.
 
 <figure id="token-def" class="listing">
 ````/code/tokenDefinition.ts````
@@ -49,23 +61,25 @@ Definition of a token matching 'traqula' in a case-insensitive manner.
 
 ## Parser Builder
 
-Parser are constructed using the ParserBuilder.
-The parser consists of a map of grammar rules mapping rule names to rule implementations.
-Rules are thus loosely coupled through their names.
+Parsers are defined using the ParserBuilder,
+which allows rules to be registered by name into a rule map, thereby creating a loose coupling between registered rules.
+Each rule is defined as a `ParserRule` object, containing both a rule name and a rule implementation.
+Rule implementations are expressed declaratively using Chevrotain’s grammar definition functions:
 
-Grammar Rules are defined by an object matching the `ParserRule` type, which is an object containing the name and rule implementation.
-The rule implementation in tern has access to de declarative grammar definition function provided by Chevrotain like:
-1. SUBRULE: continue parsing using a subrule, like a function call calling the function registered under some name in the current parser,
-2. MANY: parsing the context zero or more times, and
-3. OR: parsing one of the branches provided.
-As well as a WeakMap cache that can be used to optimize consecutive parses,
-for example when a rule constructs large arrays that can be cached between executions. 
+1. SUBRULE: invokes another rule, registered under some name in the current parser,
+2. MANY: matches zero or more occurrences of a pattern,
+3. OR: matches one of several alternatives.
 
-Each rule should then return a function that can be executed by the parser when parsing,
-this function gets a context entry and parameters if need be, and return a partial Syntax Tree. 
+Additionally, rules have access to a WeakMap-based cache for optimizing repeat invocations
+— useful when rule implementation construct large arrays that can be cached between executions.
+
+Each rule implementation returns a function that,
+when invoked, receives the parsing context and any parameters, and outputs part of the final syntax tree. 
 [](#ruleDef) shows an example parser rule definition.
-These rule definitions can then be used to construct a parser using the parser builder which provides methods like
-`typePatch`, `addRule`, `deleteRule`, and `merge`.
+
+The ParserBuilder supports compositional construction and extension through methods like addRule, deleteRule, merge, and typePatch.
+The typePatch utility enables type updates to existing rules
+— particularly useful when extending or modifying a dependent rule without altering the original rule’s implementation.
 After the construction of your parser, you can build it, as shown in [](#parserBuild),
 returning a parser which allows you to start parsing a string from any of the parser rules added to the builder.
 
@@ -88,8 +102,10 @@ It also shows how to parse using the iriOrNil rule as the starting rule.
 
 ## Generator Builder
 
-A generator can be used to convert a created AST to a string again.
-This can be done in a similar way to the parser generator, namely an object with its name and definition.
-The definition is again a function that receives declarative functions used for generation and return a function that can be called by the generator.
-That function receives the AST, a context and parameter types.
+Generators are used to convert an AST back into a string representation.
+Like parsers, generators are composed of named rules, each associated with a definition function.
+These functions receive declarative utilities for constructing the output,
+and return a callable function that operates over AST nodes, context, and parameters.
 
+This builder pattern allows for easy composition and reuse of output logic,
+and promotes consistency between parsing and generation pipelines.
