--- a/content/0.abstract.md
+++ b/content/0.abstract.md
@@ -19,6 +19,6 @@
 
 **Source Code**: [https://github.com/comunica/traqula](https://github.com/comunica/traqula)
 
-**Video**: [https://youtu.be/](https://youtu.be/)
+**Demo**: [https://modular-parsing.demo.jitsedesmet.be/](https://modular-parsing.demo.jitsedesmet.be/)
 
 **Canonical version**: [https://traqula-demo-semantics-2025.jitsedesmet.be/](https://traqula-demo-semantics-2025.jitsedesmet.be/)
