--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -40,7 +40,7 @@ Each main component—lexer, parser, and generator—has a dedicated builder:
 LexerBuilder, ParserBuilder, and GeneratorBuilder.
 These builders provide type-safe APIs to assemble, customize, and extend parsing pipelines.
 
-## Lexer Builder
+### Lexer Builder
 
 Lexers are constructed using the LexerBuilder,
 which operates on an ordered list of token definitions.
@@ -59,7 +59,7 @@ Definition of a token matching 'traqula' in a case-insensitive manner.
 </figcaption>
 </figure>
 
-## Parser Builder
+### Parser Builder
 
 Parsers are defined using the ParserBuilder,
 which allows rules to be registered by name into a rule map, thereby creating a loose coupling between registered rules.
@@ -100,7 +100,7 @@ It also shows how to parse using the iriOrNil rule as the starting rule.
 </figure>
 
 
-## Generator Builder
+### Generator Builder
 
 Generators are used to convert an AST back into a string representation.
 Like parsers, generators are composed of named rules, each associated with a definition function.
