--- a/content/3.demo.md
+++ b/content/3.demo.md
@@ -3,3 +3,32 @@
 
 <!-- Demo submissions must additionally provide a description of the demonstration that will be given at the conference (which may include screenshots and must include either a link to an online demo or to a video presenting it).  -->
 
+Within the workshop demonstration we will implement three extensions of the SPARQL query language starting from a base build.
+Besides extending the query language, we will also modify the parser by limiting the language constructions.
+Specifically, we will:
+1. extend SPARQL to support the [ADJUST function](cite:cites oxigraph-adjust),
+2. extend it to support [CONSTRUCT QUAD queries](cite:cites jena-construct-quad),
+3. extend it to support [full-text search capabilities](cite:cites virtuoso-full-text-search), and
+4. limit it to drop support for OPTIONAL classes as it is proven that those significantly [impact query complexity](cite:cites querycomplexity).
+To indicate changes made, we will refer to the grammar rules as defined in the [SPARQL 1.1 specification](cite:cites spec:sparql).
+
+The purpose of this demo is to show how easily languages can be altered using Traqula, as such the demo will be quite easy.
+Introducing the ADJUST function is as easy as adding `ADJUST` to the lexer, creating a grammar rule for it, patching the
+[BuiltInCall [121]](https://www.w3.org/TR/sparql11-query/#rBuiltInCall) rule.
+
+
+To achieve CONSTRUCT QUAD queries, we can follow the [approach of Jena](https://jena.apache.org/documentation/query/construct-quad.html#grammar),
+patching the
+[ConstructQuery [10]](https://www.w3.org/TR/sparql11-query/#rConstructQuery)
+and [ConstructTriples [74]](https://www.w3.org/TR/sparql11-query/#rConstructTriples) rules and introducing a ConstructQuads rule.
+
+<!-- https://docs.openlinksw.com/virtuoso/rdfsparql/ -->
+To support full text-search capabilities, we will patch the
+[objectPath [86]](https://www.w3.org/TR/sparql11-query/#rObjectPath) and
+[object [80]](https://www.w3.org/TR/sparql11-query/#rObject) rules to allow for an '`OPTION`' token
+followed by as a score definition like '`( score Expression )`'.
+
+Dropping support for the OPTIONAL pattern is as easy as deleting the
+[OptionalGraphPattern [57]](https://www.w3.org/TR/sparql11-query/#rOptionalGraphPattern) rule,
+patching the [GraphPatternNotTriples [56]](https://www.w3.org/TR/sparql11-query/#rGraphPatternNotTriples) rule,
+and deleting the `OPTIONAL` token from the lexer.
