--- a/content/references.bib
+++ b/content/references.bib
@@ -93,6 +93,26 @@
   publisher={pearson Education}
 }
 
+@article{querycomplexity,
+  author = {P\'{e}rez, Jorge and Arenas, Marcelo and Gutierrez, Claudio},
+  title = {Semantics and complexity of SPARQL},
+  year = {2009},
+  issue_date = {August 2009},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {34},
+  number = {3},
+  issn = {0362-5915},
+  url = {https://doi.org/10.1145/1567274.1567278},
+  doi = {10.1145/1567274.1567278},
+  abstract = {SPARQL is the standard language for querying RDF data. In this article, we address systematically the formal study of the database aspects of SPARQL, concentrating in its graph pattern matching facility. We provide a compositional semantics for the core part of SPARQL, and study the complexity of the evaluation of several fragments of the language. Among other complexity results, we show that the evaluation of general SPARQL patterns is PSPACE-complete. We identify a large class of SPARQL patterns, defined by imposing a simple and natural syntactic restriction, where the query evaluation problem can be solved more efficiently. This restriction gives rise to the class of well-designed patterns. We show that the evaluation problem is coNP-complete for well-designed patterns. Moreover, we provide several rewriting rules for well-designed patterns whose application may have a considerable impact in the cost of evaluating SPARQL queries.},
+  journal = {ACM Trans. Database Syst.},
+  month = sep,
+  articleno = {16},
+  numpages = {45},
+  keywords = {Complexity, RDF, SPARQL, query language, semantic Web}
+}
+
 
 
 @inproceedings{solid,
