--- a/content/4.conclusion.md
+++ b/content/4.conclusion.md
@@ -3,3 +3,4 @@
 
 
 **Acknowledgements.** Jitse De Smet is a predoctoral fellow of the Research Foundation – Flanders (FWO) (1SB8525N).
+Ruben Taelman is a postdoctoral fellow of the Research Foundation – Flanders (FWO) (1202124N).
