--- a/content/3.demo.md
+++ b/content/3.demo.md
@@ -3,32 +3,32 @@
 
 <!-- Demo submissions must additionally provide a description of the demonstration that will be given at the conference (which may include screenshots and must include either a link to an online demo or to a video presenting it).  -->
 
-Within the workshop demonstration we will implement three extensions of the SPARQL query language starting from a base build.
-Besides extending the query language, we will also modify the parser by limiting the language constructions.
+In the workshop demonstration,
+we will showcase how Traqula enables straightforward modification and extension of the parsers.
+Starting from a prebuilt SPARQL 1.1 parser,
+we will incrementally evolve the grammar in four small steps using Traqula’s builder-based architecture.
+Each change will be demonstrated live, with code edits performed in an IDE and parser behavior verified in a browser-based UI.
 Specifically, we will:
-1. extend SPARQL to support the [ADJUST function](cite:cites oxigraph-adjust),
-2. extend it to support [CONSTRUCT QUAD queries](cite:cites jena-construct-quad),
-3. extend it to support [full-text search capabilities](cite:cites virtuoso-full-text-search), and
-4. limit it to drop support for OPTIONAL classes as it is proven that those significantly [impact query complexity](cite:cites querycomplexity).
-To indicate changes made, we will refer to the grammar rules as defined in the [SPARQL 1.1 specification](cite:cites spec:sparql).
+1. extend SPARQL to support the [ADJUST function](cite:cites oxigraph-adjust), 
+2. add support for [CONSTRUCT QUAD queries](cite:cites jena-construct-quad), 
+3. introduce [full-text search capabilities](cite:cites virtuoso-full-text-search), and 
+4. remove support for the OPTIONAL clause due to its [impact on query complexity](cite:cites querycomplexity).
 
-The purpose of this demo is to show how easily languages can be altered using Traqula, as such the demo will be quite easy.
-Introducing the ADJUST function is as easy as adding `ADJUST` to the lexer, creating a grammar rule for it, patching the
-[BuiltInCall [121]](https://www.w3.org/TR/sparql11-query/#rBuiltInCall) rule.
+These modifications will demonstrate how Traqula’s architecture—built around the
+LexerBuilder, ParserBuilder, and GeneratorBuilder—enables safe and modular grammar changes with minimal effort.
+The focus will be on how individual grammar components can be extended or replaced without touching unrelated parts of the parser.
+We will also highlight how Traqula’s use of strong typing improves the developer experience by surfacing integration errors at compile time.
 
+For each of the extensions we alter the grammar rules in accordance to the [SPARQL 1.1 specification](cite:cites spec:sparql) showed between brackets:
+1. ADJUST function: We add an '`ADJUST`' token to the lexer and add a grammar rule for it, then patch the [BuiltInCall [121]](https://www.w3.org/TR/sparql11-query/#rBuiltInCall) rule. 
+2. CONSTRUCT QUAD queries: Following [Jena’s approach](https://jena.apache.org/documentation/query/construct-quad.html#grammar),
+we patch the [ConstructQuery [10]](https://www.w3.org/TR/sparql11-query/#rConstructQuery) and [ConstructTriples [74]](https://www.w3.org/TR/sparql11-query/#rConstructTriples) rules and introduce a ConstructQuads rule. 
+3. Full-text search: <!-- https://docs.openlinksw.com/virtuoso/rdfsparql/ -->
+We patch the [objectPath [86]](https://www.w3.org/TR/sparql11-query/#rObjectPath) and [object [80]](https://www.w3.org/TR/sparql11-query/#rObject) rules to allow an '`OPTION`' keyword followed by a scoring clause like '`( score Expression )`'. 
+4. Dropping OPTIONAL: This involves deleting the [OptionalGraphPattern [57]](https://www.w3.org/TR/sparql11-query/#rOptionalGraphPattern) rule, patching the [GraphPatternNotTriples [56]](https://www.w3.org/TR/sparql11-query/#rGraphPatternNotTriples),
+and removing the '`OPTIONAL`' token from the lexer.
 
-To achieve CONSTRUCT QUAD queries, we can follow the [approach of Jena](https://jena.apache.org/documentation/query/construct-quad.html#grammar),
-patching the
-[ConstructQuery [10]](https://www.w3.org/TR/sparql11-query/#rConstructQuery)
-and [ConstructTriples [74]](https://www.w3.org/TR/sparql11-query/#rConstructTriples) rules and introducing a ConstructQuads rule.
-
-<!-- https://docs.openlinksw.com/virtuoso/rdfsparql/ -->
-To support full text-search capabilities, we will patch the
-[objectPath [86]](https://www.w3.org/TR/sparql11-query/#rObjectPath) and
-[object [80]](https://www.w3.org/TR/sparql11-query/#rObject) rules to allow for an '`OPTION`' token
-followed by as a score definition like '`( score Expression )`'.
-
-Dropping support for the OPTIONAL pattern is as easy as deleting the
-[OptionalGraphPattern [57]](https://www.w3.org/TR/sparql11-query/#rOptionalGraphPattern) rule,
-patching the [GraphPatternNotTriples [56]](https://www.w3.org/TR/sparql11-query/#rGraphPatternNotTriples) rule,
-and deleting the `OPTIONAL` token from the lexer.
+While the demo is not interactive for attendees,
+all code and tooling will be made available for experimentation after the session.
+The demo will serve to illustrate how Traqula enables a new generation of language-aware SPARQL tools with modular,
+declarative grammar support and a strong developer experience.
